0.3.0
    Markdown extensions for footnotes and tables
    New option to autobold first line
    Hashtags at the beginnings of lines are no longer treated as headings
    Autolink urls

0.2.0
    Supports Day One's native tag format
    Supports Day One's native Timezone format
    Fixed compatibility with Python 2.6
    Simplify Entry.place() arguments

0.1.1
    Bug fixes
    Better documentation
    Improve setuptools experience
    Remove stray comma from default template

0.1.0
    Arrange source into package format and upload to PyPI
    Ability to filter entries by hash tags
    Ability to filter by time using --after
    Option base64 encoding for images in html

(unnumbered)
    First published to Github