@@ -1,6 +1,7 @@
 0.3.0
     Markdown extensions for footnotes and tables
     New option to autobold first line
+    New option to convert newlines to <br>s.
     Hashtags at the beginnings of lines are no longer treated as headings
     Autolink urls
 
